Open Closed Principle

--- a/src/app/principles/open-closed-principle/open-closed-principle.component.html
+++ b/src/app/principles/open-closed-principle/open-closed-principle.component.html
@@ -1,5 +1,8 @@
 <div class="container mt-5">
-  <h2>Filmes em Cartaz</h2>
+  <h2>Open Closed Principle - Princípio Aberto-Fechado</h2>
+  <h5>Objetos ou entidades devem estar abertos para extensão, mas fechados para modificação.</h5>
+
+  <h2 class="mt-5">Filmes em Cartaz</h2>
 
   <div class="d-flex">
     <app-card [imageUrl]="'/assets/img/movie1.jpg'" [title]="'Vingança Implacável'">
