Single Responsibility Principle

--- a/src/app/principles/single-responsibily-principle/single-responsibily-principle.component.html
+++ b/src/app/principles/single-responsibily-principle/single-responsibily-principle.component.html
@@ -10,7 +10,7 @@
         <h5>{{user.first_name}} {{user.last_name}}</h5>
         <p>{{user.email}}</p>
         <a href="https://wa.me/553499999999?text={{message}}" target="blank">
-          <button class="btn btn-dark" (click)="setMessage(user.first_name)">Entrar em contato</button>
+          <button class="btn btn-dark" (click)="contact(user.first_name)">Entrar em contato</button>
         </a>
       </div>
     </div>
