--- a/src/app/violated/dependecy-inversion/dependecy-inversion.component.html
+++ b/src/app/violated/dependecy-inversion/dependecy-inversion.component.html
@@ -1,7 +1,4 @@
 <div class="container mt-5">
-  <h2>Dependency Inversion Principle - Princípio da Inversão de Dependência </h2>
-  <h5>Dependa de abstrações e não de implementações.</h5>
-
-  <h2 class="mt-5">Seja bem-vindo</h2>
+  <h2 class="mt-5">Seja bem-vindo!</h2>
   <h4>Hoje é {{now}}</h4>
 </div>
